--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>Squava</title>
     <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+            font-family: sans-serif;
+        }
         #board {
             display: grid;
             grid-template-columns: repeat(8, 40px);
