show skull behind losing 3 in a row

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -30,8 +30,20 @@
             cursor: pointer;
             font-family: sans-serif;
             font-weight: bold;
+            position: relative;
         }
         .cell:hover { background: #eee; }
+        .cell.eliminated::before {
+            content: '💀';
+            position: absolute;
+            font-size: 1.5em;
+            opacity: 0.4;
+            z-index: 1;
+        }
+        .cell span {
+            position: relative;
+            z-index: 2;
+        }
     </style>
 </head>
 <body>
@@ -80,8 +92,9 @@
             }
         };
 
-        function getFatalBits(board) {
-            let fatal = 0n;
+        function getEndGameBits(board) {
+            let winningBits = 0n;
+            let losingBits = 0n;
             const players = [BigInt(board.p0), BigInt(board.p1), BigInt(board.p2)];
             for (let p = 0; p < 3; p++) {
                 const isEliminated = !(board.activeMask & (1 << p));
@@ -102,12 +115,15 @@
                                     if (b & (1n << BigInt(nidx))) { count++; bits |= (1n << BigInt(nidx)); }
                                 }
                             }
-                            if (count === length) fatal |= bits;
+                            if (count === length) {
+                                if (isWinner) winningBits |= bits;
+                                if (isEliminated) losingBits |= bits;
+                            }
                         }
                     }
                 }
             }
-            return fatal;
+            return { winningBits, losingBits };
         }
 
         function renderBoard(board) {
@@ -115,19 +131,25 @@
             const p0 = BigInt(board.p0);
             const p1 = BigInt(board.p1);
             const p2 = BigInt(board.p2);
-            const fatal = getFatalBits(board);
+            const { winningBits, losingBits } = getEndGameBits(board);
 
             for (let i = 0; i < 64; i++) {
                 const cell = document.createElement('div');
                 cell.className = 'cell';
                 const mask = 1n << BigInt(i);
-                if ((p0 & mask) !== 0n) cell.innerText = 'X';
-                else if ((p1 & mask) !== 0n) cell.innerText = 'O';
-                else if ((p2 & mask) !== 0n) cell.innerText = 'Z';
+                const span = document.createElement('span');
+                if ((p0 & mask) !== 0n) span.innerText = 'X';
+                else if ((p1 & mask) !== 0n) span.innerText = 'O';
+                else if ((p2 & mask) !== 0n) span.innerText = 'Z';
+                cell.appendChild(span);
                 
-                if ((fatal & mask) !== 0n) {
-                    cell.style.backgroundColor = '#f8d7da';
+                if ((losingBits & mask) !== 0n) {
+                    cell.style.backgroundColor = '#f8d7da'; // Redish
                     cell.style.color = '#721c24';
+                    cell.classList.add('eliminated');
+                } else if ((winningBits & mask) !== 0n) {
+                    cell.style.backgroundColor = '#d4edda'; // Greenish
+                    cell.style.color = '#155724';
                 }
 
                 cell.onclick = () => {
